--- a/external/cxxopts/CMakeLists.txt
+++ b/external/cxxopts/CMakeLists.txt
@@ -1,2 +1,2 @@
 include(FetchLibrary)
-fetch_library(cxxopts, https://github.com/jarro2783/cxxopts.git, v3.1.1)
+fetch_library(cxxopts https://github.com/jarro2783/cxxopts.git v3.1.1)
