--- a/external/googletest/CMakeLists.txt
+++ b/external/googletest/CMakeLists.txt
@@ -1,2 +1,2 @@
 include(FetchLibrary)
-fetch_library(googletest, https://github.com/google/googletest, v1.13.0)
+fetch_library(googletest https://github.com/google/googletest v1.13.0)
