--- a/test/libc/CMakeLists.txt
+++ b/test/libc/CMakeLists.txt
@@ -15,6 +15,7 @@ target_sources(
     PRIVATE
         libc/dump_tokens.cpp
         libc/parser.cpp
+        libc/symtab.cpp
 )
 target_link_libraries(
     ${test_name}
